--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,8 @@ add_library(zombietiles SHARED
   genetic-algorithm/individual.cpp
   genetic-algorithm/individualfactory.h
   genetic-algorithm/individualfactory.cpp
+  genetic-algorithm/chromosome.h
+  genetic-algorithm/chromosome.cpp
   genetic-algorithm/gene.h
   genetic-algorithm/gene.cpp
   zombietiles-ga/zombietilesga.h
@@ -42,6 +44,8 @@ add_library(zombietiles SHARED
   zombietiles-ga/zombietilesindividual.cpp
   zombietiles-ga/zombietilesindividualfactory.h
   zombietiles-ga/zombietilesindividualfactory.cpp
+  zombietiles-ga/zombietileschromosome.h
+  zombietiles-ga/zombietileschromosome.cpp
   zombietiles-ga/room.h
   zombietiles-ga/room.cpp
   zombietiles-ga/roomgene.h
