Adicionar classe para facilitar o controle do enum

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,8 @@ add_library(zombietiles SHARED
   models/dungeonconfig.cpp
   models/roommap.hpp
   models/roommap.cpp
+  models/direction.hpp
+  models/direction.cpp
   models/room.hpp
   models/room.cpp
   models/graph.hpp
