--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,9 @@ cmake_minimum_required(VERSION 3.14)
 project(zombietiles LANGUAGES CXX)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
-set(CMAKE_AUTOUIC ON)
-set(CMAKE_AUTOMOC ON)
-set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(DCMAKE_EXPORT_COMPILE_COMMANDS 1)
 add_compile_options(-Wall -Wextra -pedantic)
  
 add_library(zombietiles SHARED
